--- a/LatestExchangeRate/appsettings.json
+++ b/LatestExchangeRate/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Server=ENDRITM\\SQLEXPRESS;Database=HangfireTest;Integrated Security=SSPI;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
