Added LatestExchangeRateUpdater and ExchnageDataProvider

--- a/ExchangeRateDataProvider/appsettings.json
+++ b/ExchangeRateDataProvider/appsettings.json
@@ -1,14 +1,12 @@
 {
   "ConnectionStrings": {
-    "HangfireConnection": "Server=ENDRITM\\SQLEXPRESS;Database=HangfireTest;Integrated Security=SSPI;",
     "DefaultConnection": "Server=ENDRITM\\SQLEXPRESS;Database=FixerDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Hangfire": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
