Changed rabbit implementation

--- a/LatestExchangeRate/appsettings.json
+++ b/LatestExchangeRate/appsettings.json
@@ -11,5 +11,12 @@
       "Hangfire": "Information"
     }
   },
+
+  "RabbitMqConfiguration": {
+    "HostName": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
+
   "AllowedHosts": "*"
 }
